Bug 461750 - Qt 6 port causes crashes in KFileMetaData::Extractor::extract() with various music files
Summary: Qt 6 port causes crashes in KFileMetaData::Extractor::extract() with various ...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.11.80
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-11-13 03:01 UTC by Nate Graham
Modified: 2022-11-13 16:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.12
Sentry Crash Report:


Attachments
One affected file (1.65 MB, audio/mpeg)
2022-11-13 03:01 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2022-11-13 03:01:28 UTC
Created attachment 153703 [details]
One affected file

Git bisect identifies 72dff67d2663b23ecdb1231443b24ca1140ef8c6 as the commit that made this start happening. Since then, I've had intermittent crashes in KFileMetaData::Extractor::extract() when playing seemingly random tracks and I decided to track it down today. I'm attaching some tracks that cause the crash, and here's the full backtrace:


#5  0x00007f87d73ac49a in KFileMetaData::Extractor::extract(KFileMetaData::ExtractionResult*) (this=<optimized out>, result=0x7fff214e3130) at /home/nate/kde/src/kfilemetadata/src/extractor.cpp:29
#6  0x00007f87d829adfa in MediaPlayer2Player::getMetadataOfCurrentTrack() (this=this@entry=0x1ab6d00) at /home/nate/kde/src/elisa/src/mpris2/mediaplayer2player.cpp:431
#7  0x00007f87d829c316 in MediaPlayer2Player::setCurrentTrack(int) (this=0x1ab6d00, newTrackPosition=<optimized out>) at /home/nate/kde/src/elisa/src/mpris2/mediaplayer2player.cpp:394
#8  0x00007f87d52d2c44 in QObject::event(QEvent*) () at /lib64/libQt5Core.so.5
#9  0x00007f87d6baed02 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () at /lib64/libQt5Widgets.so.5
#10 0x00007f87d52a81c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () at /lib64/libQt5Core.so.5
#11 0x00007f87d52ab534 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () at /lib64/libQt5Core.so.5
#12 0x00007f87d52f9537 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () at /lib64/libQt5Core.so.5
#13 0x00007f87d3865faf in g_main_context_dispatch () at /lib64/libglib-2.0.so.0
#14 0x00007f87d38bb2c8 in g_main_context_iterate.constprop () at /lib64/libglib-2.0.so.0
#15 0x00007f87d3863940 in g_main_context_iteration () at /lib64/libglib-2.0.so.0
#16 0x00007f87d52f902a in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#17 0x00007f87d52a6c1a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () at /lib64/libQt5Core.so.5
#18 0x00007f87d52aece2 in QCoreApplication::exec() () at /lib64/libQt5Core.so.5
#19 0x0000000000403ddd in main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /home/nate/kde/src/elisa/src/main.cpp:152
[Inferior 1 (process 63349) detached]


This will affect the 22.12 release if we don't fix it soon, unfortunately.
Comment 1 Nate Graham 2022-11-13 03:05:35 UTC
Another file: https://ufile.io/zz2h41c1 (it was too large to attach)
Comment 2 Bug Janitor Service 2022-11-13 14:54:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/399
Comment 3 Tobias Fella 2022-11-13 16:02:37 UTC
Git commit 794dadfc4774df09177ac5e62f355df5b8c63539 by Tobias Fella.
Committed on 13/11/2022 at 14:53.
Pushed by ngraham into branch 'master'.

Fix crash in metadata extraction

M  +2    -1    src/mpris2/mediaplayer2player.cpp

https://invent.kde.org/multimedia/elisa/commit/794dadfc4774df09177ac5e62f355df5b8c63539
Comment 4 Nate Graham 2022-11-13 16:03:29 UTC
Git commit 16671865b1aafeabc349607182719f0b58fed6e1 by Nate Graham, on behalf of Tobias Fella.
Committed on 13/11/2022 at 16:03.
Pushed by ngraham into branch 'release/22.12'.

Fix crash in metadata extraction


(cherry picked from commit 794dadfc4774df09177ac5e62f355df5b8c63539)

M  +2    -1    src/mpris2/mediaplayer2player.cpp

https://invent.kde.org/multimedia/elisa/commit/16671865b1aafeabc349607182719f0b58fed6e1