Fix crash in metadata extraction

BUG: 461750