src/mpris2/mediaplayer2player.cpp
@@ -423,7 +423,8 @@ QVariantMap MediaPlayer2Player::getMetadataOfCurrentTrack()
 #if KF5FileMetaData_FOUND
 
             const auto &mimeType = QMimeDatabase().mimeTypeForFile(m_manageHeaderBar->image().toString().mid(14)).name();
-            auto extractors = KFileMetaData::ExtractorCollection().fetchExtractors(mimeType);
+            KFileMetaData::ExtractorCollection extractorCollection;
+            auto extractors = extractorCollection.fetchExtractors(mimeType);
 
             QMap<KFileMetaData::EmbeddedImageData::ImageType, QByteArray> imageData;
             for (const auto &extractor : extractors) {
